--- a/settings.json
+++ b/settings.json
@@ -17,5 +17,9 @@
         "Machined",
         "Modified Hardware",
         "Lasercut"
+    ],
+    "recentFiles": [
+        "D:/Data/_PROGETTI/APPS/PRJ Manager 2.0/MPCNC_components.json",
+        "D:/Data/_PROGETTI/APPS/PRJ Manager 2.0/HardwareArchive.json"
     ]
 }
