setArchive and setModel moved inside the respective pages, file functions and edit functions refactored and moved inside components page and main window updated, addComponent condensated to one function using sender()

--- a/settings.json
+++ b/settings.json
@@ -19,6 +19,7 @@
         "Lasercut"
     ],
     "recentFiles": [
+        "D:/Data/_PROGETTI/APPS/PRJ Manager 2.0/test.json",
         "D:/Data/_PROGETTI/APPS/PRJ Manager 2.0/MPCNC_components.json",
         "D:/Data/_PROGETTI/APPS/PRJ Manager 2.0/HardwareArchive.json"
     ]
